# tree-sitter-sail

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  package.json  pyproject.toml  sail-grammar.txt  setup.py  tree-sitter.json
bindings/c/: tree-sitter-sail.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_sail/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSailTests/: TreeSitterSailTests.swift
grammars/sail/: CMakeLists.txt  grammar.js  package.json
grammars/sail/src/: grammar.json  node-types.json
queries/: highlights.scm  locals.scm
src/: parser.c
test/corpus/: definitions.txt  smoke.txt
